@@ -3,7 +3,7 @@
 
   <groupId>org.alfasoftware</groupId>
   <artifactId>morf-parent</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>2.12.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Morf</name>
@@ -21,7 +21,6 @@
     <module>morf-excel</module>
     <module>morf-h2</module>
     <module>morf-mysql</module>
-    <module>morf-nuodb</module>
     <module>morf-oracle</module>
     <module>morf-postgresql</module>
     <module>morf-sqlserver</module>
@@ -29,29 +28,29 @@
   </modules>
   
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aggregate.report.dir>morf-integration-test/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
 
     <!-- plugin versions -->
-    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
-    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <findbugs-maven-plugin.version>3.0.4</findbugs-maven-plugin.version>
-    <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
+    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+    <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+    <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+    <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
+    <spotbugs.version>4.7.3</spotbugs.version>
+    <spotbugs-maven-plugin.version>4.7.3.5</spotbugs-maven-plugin.version>
+    <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
     <checkstyle.version>8.12</checkstyle.version>
 
     <!-- dependency versions -->
     <commons-lang3.version>3.8</commons-lang3.version>
     <commons-codec.version>1.15</commons-codec.version>
     <commons-logging.version>1.2</commons-logging.version>
-    <guava.version>29.0-jre</guava.version>
-    <guice.version>4.2.2</guice.version>
+    <guava.version>32.0.0-jre</guava.version>
+    <guice.version>5.1.0</guice.version>
     <h2.version>1.4.200</h2.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
@@ -60,7 +59,7 @@
     <junitparams.version>1.0.4</junitparams.version>
     <jxl.version>2.6.12</jxl.version>
     <log4j.version>1.2.15</log4j.version>
-    <mockito.version>3.9.0</mockito.version>
+    <mockito.version>5.4.0</mockito.version>
     <ognl.version>2.6.9</ognl.version>
     <serializer.version>2.7.1</serializer.version>
     <xmlunit.version>2.6.4</xmlunit.version>
@@ -69,6 +68,8 @@
         morf-testsupport/**
     </sonar.coverage.exclusions>
     <test.threadCount>4</test.threadCount>
+    <!-- Empty default for when we're not using JaCoCo coverage --> 
+    <argLine />
   </properties>
   
   <build>
@@ -114,6 +115,9 @@
             <systemPropertyVariables>
               <log4j.configuration>file:${basedir}/../etc/log4j-maven.properties</log4j.configuration>
             </systemPropertyVariables>
+            <argLine>
+              @{argLine} --add-opens=java.base/java.lang=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -181,16 +185,23 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifactId>
-          <version>${findbugs-maven-plugin.version}</version>
+          <groupId>com.github.spotbugs</groupId>
+          <artifactId>spotbugs-maven-plugin</artifactId>
+          <version>${spotbugs-maven-plugin.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>com.github.spotbugs</groupId>
+              <artifactId>spotbugs</artifactId>
+              <version>${spotbugs.version}</version>
+            </dependency>
+          </dependencies>
           <configuration>
-            <excludeFilterFile>../etc/findbugs-exclude.xml</excludeFilterFile>
-          </configuration>
+            <excludeFilterFile>../etc/spotbugs-exclude.xml</excludeFilterFile>
+          </configuration>          
           <executions>
             <execution>
-              <id>sca-findbugs</id>
-              <phase>validate</phase>
+              <id>sca-spotbugs</id>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -210,7 +221,7 @@
           </dependencies>
           <configuration>
             <configLocation>../etc/checkstyle.xml</configLocation>
-            <encoding>UTF-8</encoding>
+            <inputEncoding>UTF-8</inputEncoding>
             <consoleOutput>true</consoleOutput>
             <failsOnError>true</failsOnError>
             <violationSeverity>warning</violationSeverity>
@@ -234,7 +245,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.5</version>
+          <version>0.8.10</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -265,11 +276,6 @@
       <dependency>
         <groupId>org.alfasoftware</groupId>
         <artifactId>morf-mysql</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.alfasoftware</groupId>
-        <artifactId>morf-nuodb</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -430,7 +436,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.7</version>
+            <version>1.6.13</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
